--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <script src='js/knockout-3.4.0.js'></script>
     <script src='js/map.js'></script>
     <script src='js/list.js'></script>
-    <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBNDjocmOm5AJUCXyFRuLz4TF5o6CTDSTo&callback=initMap' async defer></script>
+    <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBNDjocmOm5AJUCXyFRuLz4TF5o6CTDSTo&callback=geolocation' async defer></script>
 </body>
 </html>
