implemented createmMakers function

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>Neighbourhood Map</title>
+    <title>Museums Map</title>
     <link rel='stylesheet' href='css/style.css'>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 </head>
@@ -13,6 +13,6 @@
     <script src='js/knockout-3.4.0.js'></script>
     <script src='js/map.js'></script>
     <script src='js/list.js'></script>
-    <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBNDjocmOm5AJUCXyFRuLz4TF5o6CTDSTo&callback=geolocation' async defer></script>
+    <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBNDjocmOm5AJUCXyFRuLz4TF5o6CTDSTo&libraries=places&callback=geolocation' async defer></script>
 </body>
 </html>
