--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 </head>
 <body>
+  <div class='col-xs-2' id='geocode'>
+    <input class='form-control' id='location' placeholder='Search Location' value=''>
+  </div>
     <div id='map'></div>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
     <script src='js/knockout-3.4.0.js'></script>
