--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </div>
     <div id='map'></div>
     <div id='search' class='input-group'>
-        <span class='input-group-addon refresh'><i class='fa fa-university fa-fw'></i></span><input class='form-control' id='filter' placeholder='Filter Museums'><span class='input-group-addon'><i class='fa fa-search fa-fw'></i></span>
+        <span class='input-group-addon refresh' data-bind='click: refresh'><i class='fa fa-university fa-fw'></i></span><input class='form-control' data-bind='textInput: filterTerm, event: {keyup: filter}' placeholder='Filter Museums'><span class='input-group-addon'><i class='fa fa-search fa-fw'></i></span>
     </div>
     <div id='list' data-bind='foreach: items'>
-        <div id='item' data-bind='if: visible, click: $parent.marker'>
+        <div id='item' data-bind='visible: visible, click: $parent.marker'>
             <h5 data-bind='text: name'></h5>
             <p ><small data-bind='text: rating'></small></p>
         </div>
